gcc/testsuite/rust/rustc/ui/parser/keyword-fn-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py fn'

fn main() {
    let fn = "foo"; // { dg-error "" "" { target *-*-* } }
}

